--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "main": "./lib/index.js",
   "files": [
-    "lib"
+    "lib",
+    "types"
   ],
   "keywords": [
     "react",
