--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@types/styled-components": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "@typescript-eslint/parser": "^4.27.0",
-    "classnames": "^2.3.1",
     "commitlint": "^12.1.4",
     "commitlint-config-gitmoji": "^2.2.5",
     "conventional-changelog-gitmoji-config": "^1.4.3",
@@ -62,11 +61,12 @@
     "prettier": "^2.3.1",
     "semantic-release": "^17.4.4",
     "semantic-release-cli": "^5.4.3",
-    "styled-components": "^5.3.0",
     "typescript": "^4.3.4",
     "typescript-styled-plugin": "^0.18.0"
   },
   "dependencies": {
-    "emoji-mart": "^3.0.1"
+    "emoji-mart": "^3.0.1",
+    "classnames": "^2.3.1",
+    "styled-components": "^5.3.0"
   }
 }
