--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.2.3",
+    "@semantic-release/npm": "^7.1.3",
     "@types/emoji-mart": "^3.0.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
@@ -65,8 +66,8 @@
     "typescript-styled-plugin": "^0.18.0"
   },
   "dependencies": {
-    "emoji-mart": "^3.0.1",
     "classnames": "^2.3.1",
+    "emoji-mart": "^3.0.1",
     "styled-components": "^5.3.0"
   }
 }
