:package: fix: publishing for npm package

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -6,14 +6,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: "14.x"
-          registry-url: "https://registry.npmjs.org"
+          registry-url: "https://npm.pkg.github.com"
           scope: "@nikaera"
-      - run: yarn
+      - name: Build react-emoji-textarea 😆💖
+        run: |
+          yarn install --frozen-lockfile
+          yarn format
+          yarn build
       - run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
