--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nikaera/react-emoji-textarea",
+  "name": "react-emoji-text-area",
   "version": "1.0.0",
   "main": "./lib/index.js",
   "files": [
