--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,8 +14,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14.x"
-          registry-url: "https://npm.pkg.github.com"
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
           scope: "@nikaera"
+      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
       - name: Build react-emoji-textarea 😆💖
         run: |
           yarn install --frozen-lockfile
@@ -23,4 +25,4 @@ jobs:
           yarn build
       - run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
