:package: fix: publishing for npm package [skip ci]

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -23,6 +23,6 @@ jobs:
           yarn install --frozen-lockfile
           yarn format
           yarn build
-      - run: yarn publish
+      - run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
