--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -10,19 +10,16 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: "14.x"
+          node-version: 24
           registry-url: "https://registry.npmjs.org"
           always-auth: true
           scope: "@nikaera"
       - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
       - name: Build react-emoji-textarea 😆💖
-        run: |
-          yarn install --frozen-lockfile
-          yarn format
-          yarn build
-      - run: yarn publish --access public
+        run: npm ci && npm run build
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
