--- a/package.json
+++ b/package.json
@@ -1,16 +1,39 @@
 {
   "name": "@nikaera/react-emoji-textarea",
-  "version": "1.0.1",
+  "version": "2.0.0",
+  "description": "A modern React textarea component with emoji support.",
   "main": "./lib/index.js",
+  "module": "./lib/index.esm.js",
+  "types": "./lib/index.d.ts",
   "files": [
     "lib",
     "types"
   ],
+  "exports": {
+    ".": {
+      "import": "./lib/index.esm.js",
+      "require": "./lib/index.js",
+      "types": "./lib/index.d.ts"
+    }
+  },
+  "sideEffects": false,
+  "scripts": {
+    "dev": "vite",
+    "build": "tsup src/index.ts --dts --format esm,cjs --out-dir lib",
+    "test": "vitest run",
+    "lint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write .",
+    "preview": "storybook dev -p 6006",
+    "preview:build": "storybook build",
+    "typecheck": "tsc --noEmit"
+  },
   "keywords": [
     "react",
     "emoji",
+    "textarea",
+    "component",
     "typescript",
-    "textarea"
+    "library"
   ],
   "repository": {
     "type": "git",
@@ -21,52 +44,33 @@
   },
   "author": "nikaera",
   "license": "MIT",
-  "scripts": {
-    "build": "tsc && zip -r lib.zip lib/",
-    "build:watch": "tsc -w",
-    "eslint": "eslint src/**/*.tsx",
-    "eslint:fix": "eslint src/**/*.tsx --fix",
-    "prettier:fix": "prettier . \"!test*\" --check --write",
-    "check-types": "tsc --noEmit",
-    "lint": "npm-run-all eslint check-types",
-    "format": "npm-run-all lint eslint:fix prettier:fix",
-    "semantic-release": "semantic-release",
-    "prepare": "husky install"
-  },
-  "types": "./types/react-emoji-textarea/index.d.ts",
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.2.3",
-    "@types/emoji-mart": "^3.0.4",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.8",
-    "@types/styled-components": "^5.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
-    "commitlint": "^12.1.4",
-    "commitlint-config-gitmoji": "^2.2.5",
-    "conventional-changelog-gitmoji-config": "^1.4.3",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-app": "^6.2.2",
-    "husky": "^6.0.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.1",
-    "semantic-release": "^17.4.4",
-    "semantic-release-cli": "^5.4.3",
-    "typescript": "^4.3.4",
-    "typescript-styled-plugin": "^0.18.0"
+    "@storybook/addon-docs": "^9.1.1",
+    "@storybook/react-vite": "^9.1.1",
+    "@storybook/testing-library": "^0.2.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^15.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-storybook": "^9.1.1",
+    "jsdom": "^26.1.0",
+    "prettier": "^3.0.0",
+    "storybook": "^9.1.1",
+    "tsup": "^8.0.0",
+    "typescript": "^5.4.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.2.0"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
-    "emoji-mart": "^3.0.1",
-    "styled-components": "^5.3.0"
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1"
   }
 }
