:art: chore: update dependencies and improve EmojiTextarea component
- Updated various devDependencies in package.json and package-lock.json, including ESLint, TypeScript, and Storybook packages.
- Enhanced EmojiTextarea component by refining prop types for emojiPickerProps and onEmojiPick.
- Improved emoji suggestion logic and handling of emoji selection.
- Adjusted linting and formatting scripts in package.json for better code quality.
- Updated tests for EmojiTextarea to ensure proper functionality and coverage.

--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,9 +14,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 24
-          registry-url: "https://registry.npmjs.org"
+          registry-url: 'https://registry.npmjs.org'
           always-auth: true
-          scope: "@nikaera"
+          scope: '@nikaera'
       - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
       - name: Build react-emoji-textarea 😆💖
         run: npm ci && npm run build
