--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "dev": "vite",
     "build": "tsup src/index.ts --dts --format esm,cjs --out-dir lib",
     "test": "vitest run",
-    "lint": "eslint . --ext .ts,.tsx",
-    "format": "prettier --write .",
+    "lint": "prettier --check . && eslint . --ext .ts,.tsx",
+    "fix": "prettier --write . && eslint . --ext .ts,.tsx --fix",
     "preview": "storybook dev -p 6006",
     "preview:build": "storybook build",
     "typecheck": "tsc --noEmit"
@@ -49,6 +49,8 @@
     "react-dom": ">=18.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.32.0",
     "@storybook/addon-docs": "^9.1.1",
     "@storybook/react-vite": "^9.1.1",
     "@storybook/testing-library": "^0.2.0",
@@ -57,15 +59,18 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.7.0",
-    "eslint": "^9.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.34.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-storybook": "^9.1.1",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
     "jsdom": "^26.1.0",
     "prettier": "^3.0.0",
     "storybook": "^9.1.1",
     "tsup": "^8.0.0",
-    "typescript": "^5.4.0",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.0",
     "vite": "^5.0.0",
     "vitest": "^1.2.0"
   },
