:art: refactor: rename EmojiTextarea to EmojiTextArea and update related imports
- Changed the component name from EmojiTextarea to EmojiTextArea for consistency.
- Updated all imports and exports to reflect the new component name.
- Modified package.json to change module entry point from index.esm.js to index.mjs.
- Removed unused emojiPickerProps from EmojiTextAreaProps interface.
- Updated emoji selection logic to accommodate changes in emoji-mart v5.
- Added tsup configuration for building the library with ESM and CJS formats.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "description": "A modern React textarea component with emoji support.",
   "main": "./lib/index.js",
-  "module": "./lib/index.esm.js",
+  "module": "./lib/index.mjs",
   "types": "./lib/index.d.ts",
   "files": [
     "lib",
@@ -11,7 +11,7 @@
   ],
   "exports": {
     ".": {
-      "import": "./lib/index.esm.js",
+      "import": "./lib/index.mjs",
       "require": "./lib/index.js",
       "types": "./lib/index.d.ts"
     }
