:sparkles: refactor: migrate build system from tsup to vite
- Updated package.json to change main, module, and types paths to the new dist directory.
- Removed tsup configuration file and integrated vite for building the project.
- Updated vite configuration to include vite-plugin-dts for type definitions.
- Fixed export statement in index.ts to correctly reference EmojiTextArea.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: lib
-          path: lib/
+          path: dist/
           retention-days: 7
