--- a/package.json
+++ b/package.json
@@ -2,24 +2,23 @@
   "name": "@nikaera/react-emoji-textarea",
   "version": "2.0.0",
   "description": "A modern React textarea component with emoji support.",
-  "main": "./lib/index.js",
-  "module": "./lib/index.mjs",
-  "types": "./lib/index.d.ts",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
   "files": [
-    "lib",
-    "types"
+    "dist"
   ],
   "exports": {
     ".": {
-      "import": "./lib/index.mjs",
-      "require": "./lib/index.js",
-      "types": "./lib/index.d.ts"
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "sideEffects": false,
   "scripts": {
     "dev": "vite",
-    "build": "tsup src/index.ts --dts --format esm,cjs --out-dir lib",
+    "build": "vite build",
     "test": "vitest run",
     "lint": "prettier --check . && eslint . --ext .ts,.tsx",
     "fix": "prettier --write . && eslint . --ext .ts,.tsx --fix",
@@ -68,10 +67,10 @@
     "jsdom": "^26.1.0",
     "prettier": "^3.0.0",
     "storybook": "^9.1.1",
-    "tsup": "^8.0.0",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^1.2.0"
   },
   "dependencies": {
