:bug: fix: Refactor code structure for improved readability and maintainability

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           zip -r dist.zip ./dist
           mv dist.zip react-emoji-textarea.zip
