--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.7.0",
+    "conventional-changelog-gitmoji-config": "^1.5.2",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-react": "^7.37.5",
